# procnet-recorder

./: .gitattributes  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  demo-risk-traffic.cmd
.github/workflows/: ci.yml
crates/procnet-application/: Cargo.toml
crates/procnet-application/src/: export.rs  lib.rs  session.rs
crates/procnet-cli/: Cargo.toml
crates/procnet-cli/src/: main.rs
crates/procnet-core/: Cargo.toml
crates/procnet-core/src/: lib.rs  session.rs
crates/procnet-fixture/: Cargo.toml
crates/procnet-fixture/src/: main.rs  tcp.rs  udp.rs
crates/procnet-gui/: Cargo.toml
crates/procnet-gui/src/: collector.rs  main.rs  ui.rs
crates/procnet-storage/: Cargo.toml
crates/procnet-storage/src/: export.rs  lib.rs  repository.rs
crates/procnet-windows/: Cargo.toml
crates/procnet-windows/src/: lib.rs  process_icon.rs  system_snapshot.rs
crates/procnet-windows/src/etw/: mod.rs
crates/procnet-windows/src/raw/: console_control.rs  elevation.rs  etw_control.rs  mod.rs  process_icon.rs  system_snapshot.rs
docs/adr/: 0001-windows-only-etw-first.md  0002-v2-sqlite-session-boundary.md
docs/architecture/: dependency-rules.md  overview.md
scripts/: check.ps1  demo-risk-traffic.ps1
