[workspace]
members = [
    "crates/procnet-core",
    "crates/procnet-windows",
    "crates/procnet-application",
    "crates/procnet-cli",
    "crates/procnet-fixture",
    "crates/procnet-gui",
    "crates/procnet-storage",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "MIT OR Apache-2.0"
authors = ["ProcNet Recorder contributors"]

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
