[package]
name = "procnet-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
procnet-core = { path = "../procnet-core" }
rusqlite = { version = "=0.37.0", features = ["bundled"] }

[dev-dependencies]
procnet-application = { path = "../procnet-application" }

[lints]
workspace = true
